calculator-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: calc-deployment
  labels:
    app: calc
spec:
  replicas: 3
  selector:
    matchLabels:
      app: calc
  template:
    metadata:
      labels:
        app: calc
    spec:
      containers:
      - name: calc
        image: v3xl/calculator:latest
        ports:
        - containerPort: 3000
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
